--- a/livros-react/src/App.css
+++ b/livros-react/src/App.css
@@ -10,3 +10,11 @@ h1{
 .titulo{
   max-width: 5vw;
 }
+.navbar ul {
+	display: flex;
+}
+
+.navbar ul li {
+	list-style-type: none;
+    padding-right: 14px;
+}
